# warehouse

./: .gitignore  Cargo.toml  README.md  test.html
objects/: .key
src/: main.rs
src/routes/: artifacts.rs  delete.rs  get.rs  mod.rs  test.rs  upload.rs
static/: index.js  panel.html  style.css
store/: db  snap.0000000000000851
