[package]
name = "object-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart", "http2"] }
base64 = "0.22.1"
blake3 = "1.5.5"
rand = "0.8.5"
sled = "0.34.7"
tokio = {  version = "1.42.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
