[package]
name = "object-warehouse"
version = "1.0.1"
authors = ["Oliver Pirger <0x4f48@proton.me>"]
edition = "2021"
description = "A lightweight object storage database"
readme = "README.md"
repository = "https://github.com/4f48/warehouse"
license = "AGPL-3.0-only"
keywords = ["database", "storage", "object-storage"]
categories = ["database-implementations"]

[dependencies]
axum = { version = "0.7.9", features = ["multipart", "http2"] }
base64 = "0.22.1"
blake3 = "1.5.5"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
rust-embed = "8.5.0"
sled = "0.34.7"
tokio = {  version = "1.43.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
